# llmm

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: architecture.md  implementation_requirements.md
docs/claude_feat_xoiss/: architecture-dialog-2.md  architecture-dialog-3.txt  architecture-dialog-4.md  architecture.md  project-dialog-1.md  project-dialog-2.md
examples/chat/: command.sh  prompt.toml
examples/config/: config.toml
examples/export/: command.sh  dialog_20260317_212210.dlg.toml  dialog_20260317_212932.dlg.toml  dialog_20260317_213902.dlg.toml  template.jinja
examples/run/: command.sh  doc1.txt  doc2.md  prompt.toml
src/llmm/: __main__.py  cli.py  config.py  console.py  dialog.py  llm_client.py  prompt.py  scenario1.py  scenario2.py  serializer.py
