[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[project]
name            = "llmm"
version         = "1.0.0a1"
requires-python = ">=3.11"
dependencies    = ["requests>=2.32.5", "jinja2>=3.1.6", "colorama>=0.4.6", "tomlkit>=0.14.0"]

[project.scripts]
llmm = "llmm.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/llmm"]
